feat(source-update): scope source update modal to active service and track impact in panels